Fix: mobile drag with overflow-y disable

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
 }
 
 @layer components {
+
+  html,body{
+    overflow-y: hidden;
+  }
+  
   .stripes::before {
     position: absolute;
     content: '';
